# AI-Video-Transcriber

./: .env.example  .gitignore  README.md  README_ZH.md  pyproject.toml  requirements.txt  start.py
backend/: main.py  media_source.py  podcast_resolver.py  summarizer.py  translator.py  video_processor.py
static/: app.js  index.html
